--- a/package.json
+++ b/package.json
@@ -1,66 +1,69 @@
 {
-  "name": "papeleria-app",
-  "version": "0.0.1",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "author": {
-    "name": "Camilo Muñoz",
-    "email": "jcamilomunozz@gmail.comm",
-    "url": "https://github.com/jcamilom"
-  },
-  "description": "ionic framework based electron project",
-  "main": "electron/electron.js",
-  "config": {
-    "ionic_bundler": "webpack",
-    "ionic_webpack": "./config/webpack.config.js"
-  },
-  "build": {
-    "appId": "com.xingke.papeleria-app",
-    "electronVersion": "1.7.9",
-    "asar":false,
-    "files": [
-      "www/**/*",
-      "electron/*"
-    ]
-  },
-  "scripts": {
-    "dev": "nf start",
-    "start":"ionic-app-scripts serve",
-    "electron dist": "electron .",
-    "ebuild":"npm run build && node_modules/.bin/build",
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "5.0.3",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
-    "@angular/core": "5.0.3",
-    "@angular/forms": "5.0.3",
-    "@angular/http": "5.0.3",
-    "@angular/platform-browser": "5.0.3",
-    "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.4.0",
-    "@ionic-native/splash-screen": "4.4.0",
-    "@ionic-native/status-bar": "4.4.0",
-    "@ionic/storage": "2.1.3",
-    "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "@ionic-native/camera": "4.3.3",
-    "@ngx-translate/core": "8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.1.5",
-    "electron": "^1.7.9",
-    "electron-builder": "^19.48.3",
-    "foreman": "^2.0.0",
-    "typescript": "2.4.2"
-  }
+    "name": "papeleria-app",
+    "version": "0.0.1",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "author": {
+        "name": "Camilo Muñoz",
+        "email": "jcamilomunozz@gmail.comm",
+        "url": "https://github.com/jcamilom"
+    },
+    "description": "ionic framework based electron project",
+    "main": "electron/electron.js",
+    "config": {
+        "ionic_bundler": "webpack",
+        "ionic_webpack": "./config/webpack.config.js"
+    },
+    "build": {
+        "appId": "com.xingke.papeleria-app",
+        "electronVersion": "1.7.9",
+        "asar": false,
+        "files": [
+            "www/**/*",
+            "electron/*"
+        ]
+    },
+    "scripts": {
+        "dev": "nf start",
+        "start": "ionic-app-scripts serve",
+        "electron dist": "electron .",
+        "ebuild": "npm run build && node_modules/.bin/build",
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/animations": "^5.1.2",
+        "@angular/cdk": "^5.0.2",
+        "@angular/common": "^5.1.2",
+        "@angular/compiler": "^5.1.2",
+        "@angular/compiler-cli": "^5.1.2",
+        "@angular/core": "^5.1.2",
+        "@angular/forms": "^5.1.2",
+        "@angular/http": "^5.1.2",
+        "@angular/material": "^5.0.2",
+        "@angular/platform-browser": "^5.1.2",
+        "@angular/platform-browser-dynamic": "^5.1.2",
+        "@ionic-native/camera": "4.3.3",
+        "@ionic-native/core": "4.4.0",
+        "@ionic-native/splash-screen": "4.4.0",
+        "@ionic-native/status-bar": "4.4.0",
+        "@ionic/storage": "2.1.3",
+        "@ngx-translate/core": "8.0.0",
+        "@ngx-translate/http-loader": "^2.0.0",
+        "ionic-angular": "3.9.2",
+        "ionicons": "3.0.0",
+        "rxjs": "5.5.2",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.18"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.1.5",
+        "electron": "^1.8.1",
+        "electron-builder": "^19.49.3",
+        "foreman": "^2.0.0",
+        "typescript": "2.4.2"
+    }
 }
