--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
         "ionic-angular": "3.9.2",
+        "ionic-tooltips": "^2.0.0",
         "ionicons": "3.0.0",
         "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
